# rusty-attachments

./: Cargo.toml  README.md
.kiro/powers/rusty-attachments-design/: POWER.md  package.json
.kiro/powers/rusty-attachments-design/steering/: bindings.md  common.md  file-system.md  hash-cache.md  job-submission.md  manifest-storage.md  manifest-utils.md  model-design.md  path-mapping.md  storage-design.md  storage-profiles.md
.kiro/steering/: coding-style.md  design-steering.md
crates/common/: Cargo.toml
crates/common/src/: constants.rs  error.rs  hash.rs  lib.rs  machine_id.rs  path_utils.rs  progress.rs
crates/filesystem/src/: diff.rs  glob.rs  lib.rs  scanner.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: grouping.rs  lib.rs  types.rs
crates/storage/: Cargo.toml
crates/storage-crt/: Cargo.toml
crates/storage-crt/src/: client.rs  error.rs  lib.rs
crates/storage/src/: cas.rs  download.rs  error.rs  lib.rs  manifest_storage.rs  traits.rs  types.rs  upload.rs
crates/storage/src/hash_cache/: backend.rs  entry.rs  error.rs  mod.rs  sqlite.rs
crates/storage/src/s3_check_cache/: backend.rs  entry.rs  error.rs  mod.rs  sqlite.rs
crates/vfs/: Cargo.toml  README.md
crates/vfs/src/: error.rs  fuse_writable.rs  lib.rs  memory_pool.rs  options.rs
crates/vfs/src/write/: dirty.rs
crates/vfs/tests/: file_operations_matrix.rs
design/: bindings.md  common.md  file_system.md  hash-cache.md  job-submission.md  manifest-storage.md  manifest-utils.md  model-design.md  path-mapping.md  storage-design.md  storage-profiles.md  todo.md  upload.md  utilities.md  vfs-writes.md  vfs.md
design/examples/: example-bundle-submit.md  example-incremental-download-detailed.md  example-incremental-download.md  example-worker-agent.md
design/implementation/: order.md
