[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/filesystem",
    "crates/model",
    "crates/storage",
    "crates/python",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aws-deadline/rusty-attachments"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tempfile = "3.0"
rusty-attachments-common = { path = "crates/common" }
rusty-attachments-model = { path = "crates/model" }
