[package]
name = "rusty-attachments-profiles"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage profiles and path grouping for Job Attachments"

[dependencies]
rusty-attachments-common.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
