[package]
name = "rusty-attachments-storage-crt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AWS SDK S3 backend for rusty-attachments storage"

[dependencies]
rusty-attachments-storage = { path = "../storage" }
async-trait.workspace = true
thiserror.workspace = true
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-credential-types = "1.2"
tokio = { version = "1.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
