[package]
name = "rusty-attachments-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage abstraction for Job Attachments S3 operations"

[dependencies]
rusty-attachments-model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
