[package]
name = "rusty-attachments-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage abstraction for Job Attachments S3 operations"

[dependencies]
rusty-attachments-common.workspace = true
rusty-attachments-model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
log = "0.4"
futures = "0.3"
filetime = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
